[package]
name = "testing"
version = "0.1.0"
authors = ["Marta Rybarczyk <martarybarczyk98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "fib"
path = "src/fib.rs"

[[bin]]
name = "generics"
path = "src/generics.rs"

[dependencies]
